style.css
/* 
Classes
main : Main container
center : Text in middle
headings : Heading font design
sub-headings : Sub-headings font design
body : Body font design
*/

/*
Font families
    font-family: 'Lato', sans-serif;
    font-family: 'Tai Heritage Pro', serif;
*/

.main {
    color: white;
    background: black;
}

.center {
    display: flex;
    justify-content: center;
    align-items: center;
}

.headings {
    font-family: 'Lato', sans-serif;
    font-weight: 700;
    font-size: large;
}

.sub-headings {
    font-family: 'Lato', sans-serif;
    font-weight: 300;
    font-style: italic;
    font-size: medium;
}

.body {
    font-family: 'Tai Heritage Pro', sans-serif;
    font-weight: 400;
    font-size: small;
}

.hovertext:before {
    content: attr(data-hover);
    visibility: hidden;
    opacity: 0;
    width: max-content;
    background-color: #0d1784;
    color: white;
    text-align: center;
    border-radius: 5px;
    padding: 5px 5px;
    transition: opacity 0.5s ease-in-out;

    position: absolute;
    z-index: 1;
    left: 0;
    top: 110%;
}

.hovertext:hover:before {
    opacity: 1;
    visibility: visible;
}

